<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_view_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_title"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/text_view_filter_manufacturer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter_by_manufacturer"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/text_view_title"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/spinner_manufacturers"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="@id/text_view_filter_manufacturer"
        app:layout_constraintBottom_toBottomOf="@id/text_view_filter_manufacturer"
        app:layout_constraintStart_toEndOf="@id/text_view_filter_manufacturer"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/text_view_sort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sort_by"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/spinner_manufacturers"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/spinner_sort_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:entries="@array/sort_fields"
        app:layout_constraintTop_toTopOf="@id/text_view_sort"
        app:layout_constraintBottom_toBottomOf="@id/text_view_sort"
        app:layout_constraintStart_toEndOf="@id/text_view_sort"
        app:layout_constraintEnd_toStartOf="@id/spinner_sort_order" />

    <Spinner
        android:id="@+id/spinner_sort_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/sort_order"
        app:layout_constraintTop_toTopOf="@id/spinner_sort_field"
        app:layout_constraintBottom_toBottomOf="@id/spinner_sort_field"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/text_view_filter_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/min_price"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/text_view_sort"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edit_text_min_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:inputType="numberDecimal"
        android:hint="@string/enter_price"
        app:layout_constraintTop_toTopOf="@id/text_view_filter_price"
        app:layout_constraintBottom_toBottomOf="@id/text_view_filter_price"
        app:layout_constraintStart_toEndOf="@id/text_view_filter_price"
        app:layout_constraintEnd_toStartOf="@id/button_filter" />

    <Button
        android:id="@+id/button_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter"
        app:layout_constraintTop_toTopOf="@id/edit_text_min_price"
        app:layout_constraintBottom_toBottomOf="@id/edit_text_min_price"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/edit_text_min_price"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/text_view_stats"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/darker_gray"
        android:padding="8dp"
        android:textColor="@android:color/white"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/button_reset"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_feeds"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/text_view_stats"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>